--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.2
 beautifulsoup4==4.13.4
 black==25.1.0
 certifi==2025.4.26
@@ -10,6 +11,8 @@ greenlet==3.2.2
 idna==3.10
 isort==6.0.1
 lxml==5.4.0
+Mako==1.3.10
+MarkupSafe==3.0.2
 mccabe==0.7.0
 mypy_extensions==1.1.0
 numpy==1.23.5
