--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.7
+aiomultiprocessing==0.1
+aiosignal==1.3.2
 alembic==1.15.2
+annotated-types==0.7.0
+async-timeout==5.0.1
+asyncio==3.4.3
+asyncpg==0.30.0
+attrs==25.3.0
 beautifulsoup4==4.13.4
 black==25.1.0
 certifi==2025.4.26
@@ -7,6 +17,7 @@ click==8.1.8
 colorama==0.4.6
 et_xmlfile==2.0.0
 flake8==7.2.0
+frozenlist==1.6.0
 greenlet==3.2.2
 idna==3.10
 isort==6.0.1
@@ -14,6 +25,7 @@ lxml==5.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 mccabe==0.7.0
+multidict==6.4.4
 mypy_extensions==1.1.0
 numpy==1.23.5
 openpyxl==3.1.5
@@ -21,9 +33,12 @@ packaging==25.0
 pandas==1.1.5
 pathspec==0.12.1
 platformdirs==4.3.8
+propcache==0.3.1
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pycodestyle==2.13.0
+pydantic==2.11.4
+pydantic_core==2.33.2
 pyflakes==3.3.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
@@ -35,7 +50,9 @@ soupsieve==2.7
 SQLAlchemy==2.0.40
 tomli==2.2.1
 tqdm==4.67.1
+typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 xlrd==1.2.0
+yarl==1.20.0
