--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.7
-aiomultiprocessing==0.1
+aioprocessing==2.0.1
 aiosignal==1.3.2
 alembic==1.15.2
 annotated-types==0.7.0
@@ -38,6 +38,7 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pycodestyle==2.13.0
 pydantic==2.11.4
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pyflakes==3.3.2
 python-dateutil==2.9.0.post0
