--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.7
 aioprocessing==2.0.1
+aioredis==2.0.1
 aiosignal==1.3.2
 alembic==1.15.2
 annotated-types==0.7.0
+anyio==4.9.0
+APScheduler==3.11.0
 async-timeout==5.0.1
 asyncio==3.4.3
 asyncpg==0.30.0
@@ -16,9 +19,13 @@ charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 et_xmlfile==2.0.0
+exceptiongroup==1.3.0
+fastapi==0.115.12
+fastapi-cache2==0.2.2
 flake8==7.2.0
 frozenlist==1.6.0
 greenlet==3.2.2
+h11==0.16.0
 idna==3.10
 isort==6.0.1
 lxml==5.4.0
@@ -32,6 +39,7 @@ openpyxl==3.1.5
 packaging==25.0
 pandas==1.1.5
 pathspec==0.12.1
+pendulum==3.1.0
 platformdirs==4.3.8
 propcache==0.3.1
 psycopg2==2.9.10
@@ -45,15 +53,20 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 pyxlsb==1.0.10
+redis==6.2.0
 requests==2.32.3
 six==1.17.0
+sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.40
+starlette==0.46.2
 tomli==2.2.1
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.4.0
+uvicorn==0.34.3
 xlrd==1.2.0
 yarl==1.20.0
