--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.12.7
 aioprocessing==2.0.1
 aioredis==2.0.1
 aiosignal==1.3.2
+aiosqlite==0.21.0
 alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
@@ -18,6 +19,7 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+coverage==7.9.1
 et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
@@ -26,7 +28,10 @@ flake8==7.2.0
 frozenlist==1.6.0
 greenlet==3.2.2
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 isort==6.0.1
 lxml==5.4.0
 Mako==1.3.10
@@ -41,6 +46,7 @@ pandas==1.1.5
 pathspec==0.12.1
 pendulum==3.1.0
 platformdirs==4.3.8
+pluggy==1.6.0
 propcache==0.3.1
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
@@ -49,6 +55,11 @@ pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pyflakes==3.3.2
+Pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.0.0
+pytest-cov==6.2.1
+pytest-docker==3.2.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
